[build-system]
requires = ["setuptools ~= 65.6", "setuptools_scm[toml] ~= 7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfatfs"
description = "FAT12/FAT16/FAT32 implementation with VFAT support"
readme = "README.rst"
requires-python = ">=3.6"
dependencies = ["fs>=2.4.0,<3.0.0"]
keywords = ["filesystem", "PyFilesystem2", "FAT12", "FAT16", "FAT32", "VFAT", "LFN"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems"
]
authors = [
  { name = "Nathan-J. Hirschauer", email = "nathanhi@deepserve.info" }
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nathanhi/pyfatfs"
Documentation = "https://pyfatfs.readthedocs.io"
Changelog = "https://github.com/nathanhi/pyfatfs/blob/master/CHANGELOG.rst"
Issues = "https://github.com/nathanhi/pyfatfs/issues"
Source = "https://github.com/nathanhi/pyfatfs"

[project.entry-points."fs.opener"]
fat = "pyfatfs.PyFatFSOpener:PyFatFSOpener"

[project.optional-dependencies]
develop = [
    "pytest>=6.2.0,<7.0.0",
    "pytest-cov>=2.11.0,<3.0.0",
    "pytest-mock>=3.5.0,<4.0.0",
    "pytest-runner>=5.3.0,<6.0.0",
    "codacy-coverage>=1.3.0,<2.0.0",
    "coveralls>=3.0.0,<4.0.0",
    "flake8~=5.0",
    "flake8-docstrings>=1.6.0,<2.0.0",
    "pip-tools>=6.12.0,<7.0.0",
    "sphinx~=3.5",
    "build~=0.9",
]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}
dependencies = {file = ["requirements/install.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
