[build-system]
requires = ["setuptools ~= 67.8", "setuptools_scm[toml] ~= 7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfatfs"
description = "FAT12/FAT16/FAT32 implementation with VFAT support"
readme = "README.rst"
requires-python = "~=3.8"
dependencies = ["fs~=2.4"]
keywords = ["filesystem", "PyFilesystem2", "FAT12", "FAT16", "FAT32", "VFAT", "LFN"]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems"
]
authors = [
  { name = "Nathan-J. Hirschauer", email = "nathanhi@deepserve.info" }
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nathanhi/pyfatfs"
Documentation = "https://pyfatfs.readthedocs.io"
Changelog = "https://github.com/nathanhi/pyfatfs/blob/master/CHANGELOG.rst"
Issues = "https://github.com/nathanhi/pyfatfs/issues"
Source = "https://github.com/nathanhi/pyfatfs"

[project.entry-points."fs.opener"]
fat = "pyfatfs.PyFatFSOpener:PyFatFSOpener"

[project.optional-dependencies]
development = [
    "pytest~=6.2",
    "pytest-cov~=2.11",
    "pytest-mock~=3.5",
    "pytest-runner~=5.3",
    "codacy-coverage~=1.3",
    "coveralls~=3.0",
    "flake8~=7.0",
    "flake8-docstrings~=1.6",
    "pip-tools~=7.3",
    "sphinx~=7.1.2",
    "build~=0.9",
]

[tool.setuptools_scm]

[tool.setuptools]
packages = ["pyfatfs"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
